--- a/payment.html
+++ b/payment.html
@@ -71,7 +71,7 @@
                         <div class="invoice-table">
                             <div class="invoice-header">
                                 <div class="invoice-number">رقم الفاتورة: INV-2024-001</div>
-                                <div class="invoice-date">تاريخ الإصدار: 20 يوليو 2025</div>
+                                <div class="invoice-date">تاريخ الإصدار: 20 يوليو 2024</div>
                             </div>
                             
                             <div class="invoice-items">
@@ -138,6 +138,15 @@
                                 <div class="account-item">
                                     <span class="account-label">اسم الحساب:</span>
                                     <span class="account-value">جامعة أم القرى</span>
+                                </div>
+                                <div class="account-item">
+                                    <span class="account-label">رقم الحساب:</span>
+                                    <div class="iban-container">
+                                        <span class="account-value iban-number" id="payment-account-number">62300128600303</span>
+                                        <button class="copy-btn" onclick="copyAccountNumber()" title="نسخ رقم الحساب">
+                                            📋
+                                        </button>
+                                    </div>
                                 </div>
                                 <div class="account-item">
                                     <span class="account-label">رقم الآيبان:</span>
