--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 </div>
                 <nav class="nav-menu">
                     <a href="#" class="nav-link active">الرئيسية</a>
-                    <a href="#" class="nav-link">عن الجامعة</a>
-                    <a href="#" class="nav-link">الكليات</a>
-                    <a href="#" class="nav-link">القبول</a>
+                    <a href="courses.html" class="nav-link">تسجيل المقررات</a>
+                    <a href="schedule.html" class="nav-link">الجدول الدراسي</a>
+                    <a href="#" class="nav-link">البطاقة الجامعية</a>
                     <a href="#" class="nav-link">اتصل بنا</a>
                 </nav>
                 <div class="header-actions">
                     <button class="lang-btn">English</button>
-                    <button class="login-btn">تسجيل الدخول</button>
+                    <button class="login-btn" onclick="window.location.href=\'login.html\'">تسجيل الدخول</button>
                 </div>
             </div>
         </div>
@@ -135,6 +135,50 @@
                         ارفق صورة إيصال التحويل البنكي لإتمام عملية التسجيل
                     </p>
                     <button class="service-btn">رفع الإيصال</button>
+                </div>
+
+                <div class="service-card" onclick="goToCourses()">
+                    <div class="service-icon-wrapper">
+                        <i class="service-icon">📚</i>
+                    </div>
+                    <h3 class="service-title">تسجيل المقررات</h3>
+                    <p class="service-description">
+                        سجل في المقررات الدراسية المناسبة لتخصصك ومستواك الأكاديمي
+                    </p>
+                    <button class="service-btn">تسجيل المقررات</button>
+                </div>
+
+                <div class="service-card" onclick="goToSchedule()">
+                    <div class="service-icon-wrapper">
+                        <i class="service-icon">📅</i>
+                    </div>
+                    <h3 class="service-title">الجدول الدراسي</h3>
+                    <p class="service-description">
+                        اطلع على جدولك الدراسي الأسبوعي والمقررات المسجلة
+                    </p>
+                    <button class="service-btn">عرض الجدول</button>
+                </div>
+
+                <div class="service-card" onclick="goToStudentCard()">
+                    <div class="service-icon-wrapper">
+                        <i class="service-icon">🆔</i>
+                    </div>
+                    <h3 class="service-title">البطاقة الجامعية</h3>
+                    <p class="service-description">
+                        احصل على بطاقتك الجامعية ورقمك الجامعي بعد سداد الرسوم
+                    </p>
+                    <button class="service-btn">عرض البطاقة</button>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-icon-wrapper">
+                        <i class="service-icon">📞</i>
+                    </div>
+                    <h3 class="service-title">الدعم الفني</h3>
+                    <p class="service-description">
+                        احصل على المساعدة والدعم الفني لجميع الخدمات الإلكترونية
+                    </p>
+                    <button class="service-btn">تواصل معنا</button>
                 </div>
             </div>
         </div>
